--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
             <a href="{{ site.baseurl }}/research">Research</a>
             <a href="{{ site.baseurl }}/personal">Personal</a>
-            <!-- <a href="{{ site.baseurl }}/blog">Blog</a> -->
+            <a href="{{ site.baseurl }}/blog">Blog</a>
             <a href="{{ site.baseurl }}/contact">Contact</a>
           </nav>
         </header>
