--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,8 @@
 // Colors
 $blue: #4183C4;
 $red: rgb(255,081,035);
-$highlight: rgba(255,081,035,.5);
+//$highlight: rgba(255,081,035,.5);
+$highlight: #0000ff;
 // $hover: #000;
 
 // Grays
